--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "@avalanche/component-button": "^4.0.0-alpha.6",
     "@avalanche/object-grid": "^4.0.0-alpha.14",
     "ava": "^0.22.0",
-    "bootstrap": "^4.0.0-beta",
+    "bootstrap": "4.0.0-beta",
     "lerna": "^2.2.0",
     "node-sass": "^4.5.3",
     "npm-check-updates": "^2.12.1",
