--- a/packages/node-sass-package-importer/package.json
+++ b/packages/node-sass-package-importer/package.json
@@ -8,7 +8,7 @@
     "package-importer",
     "sass"
   ],
-  "version": "5.0.0-alpha.17",
+  "version": "5.0.0",
   "author": "Markus Oberlehner",
   "homepage": "https://github.com/maoberlehner/node-sass-magic-importer/tree/master/packages/node-sass-package-importer",
   "license": "MIT",
@@ -27,7 +27,7 @@
     "url": "https://github.com/maoberlehner/node-sass-magic-importer/issues"
   },
   "dependencies": {
-    "node-sass-magic-importer": "^5.0.0-alpha.17"
+    "node-sass-magic-importer": "^5.0.0"
   },
   "devDependencies": {
     "@types/node": "^8.0.31",
