--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ script:
   - npm run bootstrap
   - npm run lint
   - npm run build
-  - npm run test
-  - npm run coveralls
+  - npm run test -- --maxWorkers=4
+  - npm run coveralls -- --maxWorkers=4
